k8s/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_PROJECT_NAME}
  namespace: ${APP_PROJECT_NAME}
spec:
  type: NodePort
  selector:
    app: ${APP_PROJECT_NAME}
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30090
      name: frontend
    - port: 8000
      targetPort: 8000
      nodePort: 30091
      name: backend
