k8s/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_PROJECT_NAME}
  namespace: ${APP_PROJECT_NAME}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ${APP_PROJECT_NAME}.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP_PROJECT_NAME}
                port:
                  number: 80
          - path: /api/py
            pathType: Prefix
            backend:
              service:
                name: ${APP_PROJECT_NAME}
                port:
                  number: 8000
